--- a/TODO
+++ b/TODO
@@ -1,7 +1,6 @@
 TODO
 
--"Etsi" varmaan päivitysongelma
--"Poista" ei pysyvä -> muodosta yhteys tauluun
+-"Etsi" päivitysongelma
 
 Päivän ateriat:
 	-määrä, jonka perusteella laskee energian
